[gd_scene load_steps=12 format=3]

[ext_resource type="StyleBox" path="res://-tests/heli_test/ui/styles/button/button_normal.tres" id="1"]
[ext_resource type="PackedScene" path="res://menus/components/ControlHelp.tscn" id="2"]
[ext_resource type="Script" path="res://menus/components/pause_menu/pause_menu.gd" id="3"]
[ext_resource type="PackedScene" path="res://menus/components/settings_menu/settings_menu.tscn" id="4"]
[ext_resource type="StyleBox" path="res://-tests/heli_test/ui/styles/button/button_hover.tres" id="6"]
[ext_resource type="StyleBox" path="res://-tests/heli_test/ui/styles/button/button_pressed.tres" id="7"]
[ext_resource type="Shader" path="res://-tests/heli_test/shaders/canvas_blur.gdshader" id="8"]
[ext_resource type="PackedScene" path="res://-tests/heli_test/ui/nodes/BlurBackground.tscn" id="13"]
[ext_resource type="FontFile" path="res://-tests/heli_test/ui/fonts/JetBrainsMono/JetBrainsMono.tres" id="15"]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.294118 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/amount = 2.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource( 3 )
main_menu = "res://menus/main_menu/main_menu.tscn"
level = "res://scenes/levels/level1.tscn"

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.164706, 0.164706, 0.498039 )

[node name="SettingsMenu" parent="." instance=ExtResource( 4 )]

[node name="InGameMenu" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="BlurBackground" parent="InGameMenu" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="InGameMenu"]
modulate = Color( 0, 1, 0.392157, 1 )
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = 300.0
offset_bottom = -40.0
grow_vertical = 0
custom_constants/separation = 5
alignment = 2

[node name="return" type="Button" parent="InGameMenu/Buttons"]
offset_top = 865.0
offset_right = 260.0
offset_bottom = 895.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 15 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 1 )
text = " Return To Game"
align = 0

[node name="BlurBackground" parent="InGameMenu/Buttons/return" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="restart_mission" type="Button" parent="InGameMenu/Buttons"]
offset_top = 900.0
offset_right = 260.0
offset_bottom = 930.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 15 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 1 )
text = " Restart Mission"
align = 0

[node name="BlurBackground" parent="InGameMenu/Buttons/restart_mission" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="settings" type="Button" parent="InGameMenu/Buttons"]
visible = false
offset_top = 900.0
offset_right = 260.0
offset_bottom = 930.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 15 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 1 )
text = " Settings"
align = 0

[node name="BlurBackground" parent="InGameMenu/Buttons/settings" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="main_menu" type="Button" parent="InGameMenu/Buttons"]
offset_top = 935.0
offset_right = 260.0
offset_bottom = 965.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 15 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 1 )
text = " Main Menu"
align = 0

[node name="BlurBackground" parent="InGameMenu/Buttons/main_menu" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="quit_to_desktop" type="Button" parent="InGameMenu/Buttons"]
offset_top = 970.0
offset_right = 260.0
offset_bottom = 1000.0
grow_vertical = 0
minimum_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 15 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = ExtResource( 1 )
custom_styles/disabled = ExtResource( 7 )
custom_styles/normal = ExtResource( 1 )
text = " Quit To Desktop"
align = 0

[node name="BlurBackground" parent="InGameMenu/Buttons/quit_to_desktop" instance=ExtResource( 13 )]
material = SubResource( 2 )

[node name="ControlHelp" parent="InGameMenu" instance=ExtResource( 2 )]

[connection signal="pressed" from="InGameMenu/Buttons/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="InGameMenu/Buttons/restart_mission" to="." method="_on_restart_mission_pressed"]
[connection signal="pressed" from="InGameMenu/Buttons/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="InGameMenu/Buttons/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="InGameMenu/Buttons/quit_to_desktop" to="." method="_on_quit_to_desktop_pressed"]
